syntax = "proto3";

package silenteight.agent.historicaldecisions.v1.api;

import "google/api/field_behavior.proto";
import public "silenteight/agent/historicaldecisions/v1/api/common.proto";

option java_package = "com.silenteight.proto.agent.histdecisions.v1.api";
option java_outer_classname = "HistoricalDecisionsAgentApiProto";
option java_multiple_files = true;

service HistoricalDecisionsAgent {
  rpc Verify (VerifyRequest) returns (VerifyResponse) {
  }
}

message ModelKey {
  oneof type {
    AlertedParty alerted_party = 1;
    WatchlistParty watchlist_party = 2;
    Match match = 3;
  }
}

message AlertedParty {
  string id = 1 [(google.api.field_behavior) = REQUIRED]; // e.g. AP_ID_401
}

message Match {
  AlertedParty alerted_party = 1 [(google.api.field_behavior) = REQUIRED];
  WatchlistParty watchlist_party = 2 [(google.api.field_behavior) = REQUIRED];
}

message VerifyResponse {
  string solution = 1 [(google.api.field_behavior) = REQUIRED];
  HistoricalDecisionsReason reason = 2 [(google.api.field_behavior) = REQUIRED];
}

message VerifyRequest {
  ModelKey model_key = 1 [(google.api.field_behavior) = REQUIRED];
  Discriminator discriminator = 2 [(google.api.field_behavior) = REQUIRED];
}
